コンセプト追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RE:Beauty Salon</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,9 +37,9 @@
                 <!-- 閉じるボタン -->
                 <div class="close-btn" id="close-btn">&times;</div>
                 <ul>
-                    <li><a href="#concept">コンセプト</a></li>
-                    <li><a href="#about">アバウト</a></li>
-                    <li><a href="#contact">アクセス</a></li>
+                    <li><a href="#concept">CONCEPT</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#contact">ACCESS</a></li>
                 </ul>
             </nav>
         </div>
@@ -49,8 +56,10 @@
     <!-- コンセプト -->
     <section id="concept" class="concept">
         <div class="container">
-            <h2>コンセプト</h2>
+            <h2>CONCEPT</h2>
+            <img src="images/test01.jpeg" alt="コンセプト画像">
             <p>お店のコンセプト</p>
+            <p>アルコールが入ると高確率で寝るやつ。なんて奴だ！</p>
         </div>
     </section>
 
