写真の追加

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <ul>
                     <li><a href="#concept">CONCEPT</a></li>
                     <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#price">PRICE</a></li>
                     <li><a href="#contact">ACCESS</a></li>
                 </ul>
             </nav>
@@ -66,8 +67,18 @@
     <!-- アバウト -->
     <section id="about" class="about">
         <div class="container">
-            <h2>アバウト</h2>
-            <p>れな嬢について、店について</p>
+            <h2>ABOUT</h2>
+            <img src="images/test02.jpg" alt="アバウト">
+            <p>全日本変態性癖寝技部門96kg級決勝戦。気合の入った表情を見せる松田直樹23歳。その体重で相手を圧倒し、優勝した。</p>
+        </div>
+    </section>
+
+    <!-- プライス -->
+    <section id="price" class="price">
+        <div class="container">
+            <h2>PRICE</h2>
+            <img src="images/image5.jpeg" alt="料金">
+            <img src="images/image6.png" alt="料金">
         </div>
     </section>
 
