拡張子の変更

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2>ABOUT</h2>
-            <img src="images/test02.jpg" alt="アバウト">
+            <img src="images/test02.jpeg" alt="アバウト">
             <p>全日本変態性癖寝技部門96kg級決勝戦。気合の入った表情を見せる松田直樹23歳。その体重で相手を圧倒し、優勝した。</p>
         </div>
     </section>
