拡張子の変更

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         <div class="container">
             <h2>CONCEPT</h2>
             <img src="images/test01.jpeg" alt="コンセプト画像">
-            <p>お店のコンセプト</p>
-            <p>アルコールが入ると高確率で寝るやつ。なんて奴だ！</p>
+            <p>あまりの気持ちよさに秒で寝てしまう人。何か静かになった
+                な～と思ったらたいてい寝ている。一度寝たら復活することはない。
+                それでもお酒は大好き。
+            </p>
         </div>
     </section>
 
