HTMLタグの追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RE:Beauty Salon</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="福岡県大野城市乙金にあるエステサロン。コンセプトや特徴を紹介。">
+    <meta name="google-site-verification" content="MgzmGyqho0nXmwoXF_NqHMRCrINc1vWLldP8DgnZ0B4" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
