--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-        <meta name="google-site-verification" content="MgzmGyqho0nXmwoXF_NqHMRCrINc1vWLldP8DgnZ0B4" />
+    <meta name="google-site-verification" content="MgzmGyqho0nXmwoXF_NqHMRCrINc1vWLldP8DgnZ0B4" />
 </head>
 
 <body>
@@ -63,7 +64,7 @@
             <img src="images/test01.jpeg" alt="コンセプト画像">
             <p>あまりの気持ちよさに秒で寝てしまう人。何か静かになった
                 な～と思ったらたいてい寝ている。一度寝たら復活することはない。
-                それでもお酒は大好き。
+                お腹にあるシミはよだれ。汚いですね。
             </p>
         </div>
     </section>
@@ -89,9 +90,13 @@
     <!-- アクセス（電話番号と住所） -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>アクセス</h2>
+            <h2>ACCESS</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13299.766262808835!2d130.4940714279069!3d33.55489452556075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35419ae96012e533%3A0xb08596f5cb95da25!2z44CSODE2LTA5MDEg56aP5bKh55yM5aSn6YeO5Z-O5biC5LmZ6YeR5p2x!5e0!3m2!1sja!2sjp!4v1749302392629!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p>福岡県大野城市乙金</p>
-            <p>インスタアカウントのリンク</p>
+            <p>↓ご予約・お問い合わせはインスタから↓</p>
+            <a href="https://www.instagram.com/re.beauty.salon/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-instagram fa-2x"></i>
+            </a>
         </div>
     </section>
 
