ヒーローイメージ大きさ変更

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     </header>
 
     <section class="hero">
-        <div class="slideshow" aria-label="ヒーロースライドショー"></div>
-        <div class="hero-overlay">
-            <img src="images/image2.png" alt="お店の名前" />
+        <div class="container hero-container">
+            <div class="slideshow" aria-label="ヒーロースライドショー"></div>
+            <div class="hero-overlay">
+                <img src="images/image2.png" alt="お店の名前" />
+            </div>
         </div>
+
     </section>
 
     <section id="concept" class="concept container">
