--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="#concept">CONCEPT</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#price">PRICE</a></li>
-                    <li><a href="#contact">ACCESS</a></li>
+                    <li><a href="#access">ACCESS</a></li>
                 </ul>
             </nav>
         </div>
