--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <meta name="google-site-verification" content="MgzmGyqho0nXmwoXF_NqHMRCrINc1vWLldP8DgnZ0B4" />
 </head>
 
